[gd_scene load_steps=4 format=2]

[ext_resource path="res://skills/effects/skill_effect.gd" type="Script" id=1]
[ext_resource path="res://assets/sfx/magic_heal.wav" type="AudioStream" id=2]
[ext_resource path="res://skills/effects/heal_particles.tscn" type="PackedScene" id=3]

[node name="SkillEffect" type="Node2D"]
z_index = 1
script = ExtResource( 1 )
heal_particles_packed_scene = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="SkillSound" type="AudioStreamPlayer" parent="."]
bus = "Sound effects"

[node name="AbsorbHealSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
bus = "Sound effects"

[node name="Tween" type="Tween" parent="."]

[node name="DelayBeforeAbsorbingDamageTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="DelayAfterAbsorbingDamageTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="DelayAfterSkillWithoutAbsorbTimer" type="Timer" parent="."]
wait_time = 0.2
